--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <body>
 <h1>Hello CSCI571!</h1>
-<p>I'm trying my first html!!</p>
-<p>Try to change on the editor now!</p>
-<p>Can I do more??</p>
+<p>Table of Contents:</p>
+<a href ="hw01.html">HW1</a><BR>
+<a href ="hw02.html">HW2</a><BR>
+<a href ="hw03.html">HW3</a><BR>
+<a href ="hw04.html">HW4</a><BR>
+<a href ="hw05.html">HW5</a><BR>
+<a href ="hw06.html">HW6</a><BR>
+<a href ="hw07.html">HW7</a><BR>
+
 </body>
 </html>
