Update link path within the index.html

--- a/oEP5gkKhDpIndex.html
+++ b/oEP5gkKhDpIndex.html
@@ -3,13 +3,13 @@
 <body>
 <h1>Hello CSCI571!</h1>
 <p>Table of Contents:</p>
-<a href ="hw01.html">HW1</a><BR>
-<a href ="hw02.html">HW2</a><BR>
-<a href ="hw03.html">HW3</a><BR>
-<a href ="hw04.html">HW4</a><BR>
-<a href ="hw05.html">HW5</a><BR>
-<a href ="hw06.html">HW6</a><BR>
-<a href ="hw07.html">HW7</a><BR>
+<a href ="dJ588ncT0RHW1.html">HW1</a><BR>
+<a href ="szsNvocZxeHW2.html">HW2</a><BR>
+<a href ="ngaZhVehcSHW3.html">HW3</a><BR>
+<a href ="PyaycKieN7HW4.html">HW4</a><BR>
+<a href ="BpKiBgBVZaHW5.html">HW5</a><BR>
+<a href ="hWBBrMUHpKHW6.html">HW6</a><BR>
+<a href ="TGQkJZvR03HW7.html">HW7</a><BR>
 
 </body>
 </html>
