--- a/szsNvocZxeHW2.html
+++ b/szsNvocZxeHW2.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>HW2</h1>
-<p>Welcome to HW2</p>
+<p>Welcome to HW2</p><BR>
+<a href ="oEP5gkKhDpIndex.html">Back to Main Page</a><BR>
 </body>
 </html>
