--- a/TGQkJZvR03HW7.html
+++ b/TGQkJZvR03HW7.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>HW7</h1>
-<p>Welcome to HW7</p>
+<p>Welcome to HW7</p><BR>
+<a href ="oEP5gkKhDpIndex.html">Back to Main Page</a><BR>
 </body>
 </html>
