2nd update for HW3

--- a/ngaZhVehcSHW3.html
+++ b/ngaZhVehcSHW3.html
@@ -310,6 +310,9 @@ img {
 	max-width: 100%;
 	max-height: 100%;
 }
+p.cuisine{
+	color: 	blue;
+}
 
 </style>
 </head>
@@ -346,9 +349,10 @@ img {
 	<div class="c1left"><a name = "Italian"></a></div>
 	<div class="c1mid"><img src="./nKRIIiiryK/ic.jpg" alt="Italian"></div>
 	<div class="c1right">
-		Italian's finest:<br>
-		From our Lasagna to our Protein Penne, we<br>
-		have delicious options for every taste!
+		<br><br><br><br>
+		<p class="cuisine">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Italy's finest:</p>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;From our Lasagna to our Protein Penne, we<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;have delicious options for every taste!
 	</div>
 	<div class="c1right2"></div>
 </div>
@@ -356,9 +360,10 @@ img {
 <div>
 	<div class="c2left"><a name = "Indian"></a></div>
 	<div class="c2mid">
-		India's Flavors:<br>
-		Our dishes are blended with masterful<br>
-		savory spices
+		<br><br><br><br>
+		<p class="cuisine">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;India's Flavors:</p>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Our dishes are blended with masterful<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;savory spices
 	</div>
 	<div class="c2right"><img src="./nKRIIiiryK/inc.jpg" alt="Indian"></div>
 	<div class="c2right2"></div>
@@ -368,8 +373,9 @@ img {
 	<div class="c3left"><a name = "Japanese"></a></div>
 	<div class="c3mid"><img src="./nKRIIiiryK/jc.jpg" alt="Japanese"></div>
 	<div class="c3right">
-		Japanese Cuisine:<br>
-		Delicious dining options from Sake to Sushi
+		<br><br><br><br><br>
+		<p class="cuisine">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Japanese Cuisine:</p>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Delicious dining options from Sake to Sushi<br>
 	</div>
 	<div class="c3right2"></div>
 </div>
@@ -377,9 +383,10 @@ img {
 <div>
 	<div class="c4left"><a name = "Desserts"></a></div>
 	<div class="c4mid">
-		Desserts:<br>
-		From Italian Tiramisu to Indian Gulab<br>
-		Jamun
+		<br><br><br><br>
+		<p class="cuisine">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Desserts:</p>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;From Italian Tiramisu to Indian Gulab<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jamun
 	</div>
 	<div class="c4right"><img src="./nKRIIiiryK/d.jpg" alt="Desserts"></div>
 	<div class="c4right2"></div>
