before button added
fingers crossed - only button left.

--- a/ngaZhVehcSHW3.html
+++ b/ngaZhVehcSHW3.html
@@ -320,7 +320,7 @@ body {
 	border-width: 5px;
 }
 .cuisine{
-	color: 	blue;
+	color: #4081d0;
 	font-weight: bold;
 }
 .explore p{
@@ -375,9 +375,9 @@ body {
 	<div class="c2left"><a name = "Indian"></a></div>
 	<div class="c2mid">
 		<br><br><br><br>
-		<p class="cuisine">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;India's Flavors:</p>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="cuisine">India's Flavors:<br></span>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Our dishes are blended with masterful<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;savory spices
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;savory spices</p>
 	</div>
 	<div class="c2right"><img src="./nKRIIiiryK/inc.jpg" alt="Indian" class="c2"></div>
 	<div class="c2right2"></div>
@@ -388,8 +388,8 @@ body {
 	<div class="c3mid"><img src="./nKRIIiiryK/jc.jpg" alt="Japanese" class="c1"></div>
 	<div class="c3right">
 		<br><br><br><br><br>
-		<p class="cuisine">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Japanese Cuisine:</p>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Delicious dining options from Sake to Sushi<br>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="cuisine">Japanese Cuisine:<br></span>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Delicious dining options from Sake to Sushi<br></p>
 	</div>
 	<div class="c3right2"></div>
 </div>
@@ -398,9 +398,9 @@ body {
 	<div class="c4left"><a name = "Desserts"></a></div>
 	<div class="c4mid">
 		<br><br><br><br>
-		<p class="cuisine">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Desserts:</p>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="cuisine">Desserts:<br></span>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;From Italian Tiramisu to Indian Gulab<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jamun
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jamun</p>
 	</div>
 	<div class="c4right"><img src="./nKRIIiiryK/d.jpg" alt="Desserts" class="c2"></div>
 	<div class="c4right2"></div>
