--- a/ngaZhVehcSHW3.html
+++ b/ngaZhVehcSHW3.html
@@ -77,34 +77,32 @@ div.viewtop {
 	top: 160px;
 	left: 90px;
 	width: 864px;
-	height: 126px;
+	height: 70px;
 }
 div.viewmiddle {
 	position:absolute;
-	top: 286px;
+	top: 230px;
 	left: 90px;
-	width: 280px;
-	height: 274px;
+	width: 230px;
+	height: 115px;
 }
 div.viewenjoy {
 	position:absolute;
-	top: 286px;
-	left: 370px;
-	width: 584px;
-	height: 274px;
+	top: 230px;
+	left: 320px;
+	width: 634px;
+	height: 115px;
 	color: #f6f9de;
     font-family: Abril Fatface;
-    font-size: 45px;
-	font-weight: bold;
+    font-size: 50px;
 	white-space: nowrap;
 }
 div.viewbutton {
 	position:absolute;
-	top: 560px;
+	top: 345px;
 	left: 90px;
 	width: 864px;
-	height: 25px;
-	background-color: white;
+	height: 240px;
 }
 div.viewright {
 	position:absolute;
@@ -327,6 +325,16 @@ body {
 	margin: auto;
 	border-bottom: double;
 }
+.viewbutton p{
+    background: white;
+    width: 150px;
+    font-family: Arial;
+    font-size: 14px;
+    padding: 5px;
+	margin-left: 580px;
+    border-style: double;
+    cursor: pointer;
+}
 
 </style>
 </head>
@@ -350,7 +358,7 @@ body {
 			<div class="viewmiddle"></div>
 			<div class="viewenjoy"><p>Enjoy the Scenic View!!</p></div>
 		</div>
-		<div class="viewbutton"></div>
+		<div class="viewbutton"><p>Book Your Reservation</p></div>
 	</div>
 	<div class="viewright"></div>
 </div>
