--- a/hWBBrMUHpKHW6.html
+++ b/hWBBrMUHpKHW6.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>HW6</h1>
-<p>Welcome to HW6</p><BR>
-<a href ="oEP5gkKhDpIndex.html">Back to Main Page</a><BR>
-</body>
+	<head>
+	<title>The MOVIE DB</title>
+	<meta name="keywords" content="HTML, CSS">
+	<meta name="description" content="The Movie DB">
+	<meta name="author" content="3908375934 Derrick Hsu">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		body {
+			background-color: rgb(27, 199, 50);
+			/* background-attachment: fixed;
+			background-repeat: no-repeat;
+			background-size: 919px, 515px;
+			height: 515px;
+			background-position:65px 50px;
+			overflow-x: hidden; */
+		}
+	</style>	
+	</head>
+	<body>
+		<form method="POST" action="https://derricktesting.azurewebsites.net/movieSearch">
+			Movie Ttile : <input type="text" name="zip">
+			<input type="submit">
+		</form>
+		<script src="MovieDB.js">
+		</script>
+	</body>
 </html>
